--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@ Copyright 2017 Google Inc.
       <version>3.3.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
