--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,15 @@
         <url-pattern>/token</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>upload</servlet-name>
+        <servlet-class>com.appengine.entelgy.backlog.UploadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>upload</servlet-name>
+        <url-pattern>/uploadFile</url-pattern>
+    </servlet-mapping>
+
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
